# krypto_market

./: .coverage  .dockerignore  .editorconfig  .flake8  .gitignore  .pylintrc  CryptoMarket.postman_collection.json  Dockerfile  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  logs.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements-db.txt  requirements-redis.txt  requirements.dev.txt  requirements.txt
.github/workflows/: main  main.yml
__tests__/fixtures/: fixt_mock.py  fixture_test_log.py
__tests__/test_database_connections/: test_asyncsession_scope_error.py  test_init_engine_error.py  test_init_engines.py  test_session_scope_error.py
__tests__/test_derbit_clients/: __init__.py  test_derbitlimited.py
__tests__/test_midllware/: test_client_middleware_valid.py
alembic/: env.py
alembic/versions/: 20260221_create_tables.py  2026_02_12_1207-d803b952d66a_first_empty_migrate.py  2026_02_12_1227-e43e26898305_the_alembic_was_initionaly_and_the_.py  2026_02_12_1232-b404f90b1ac0_.py  2026_02_12_1314-89c1aa86078e_.py  2026_02_12_1341-1f7a281e76f9_.py  2026_02_12_1528-9af2d7d7cdba_.py  2026_02_12_1548-40a1b45a4aee_.py  2026_02_12_1616-3a6df7d76876_.py  2026_02_13_0717-eb54d34de603_.py  2026_02_13_0947-6d9cb3f93e60_.py  2026_02_13_1007-e4cbae7b58dd_.py  2026_02_13_1815-21695d13ae62_.py  2026_02_14_0737-ddcd49a1dddc_.py  (+8 more)
cryptomarket/: main.py
img/: .$Logic_visualization.png.bkp  .$project_model.drawio.png.dtmp
kryptomarket/: main.py
nginx/: .dockerignore  default.conf
(+71 files in other folders)
