[tool.poetry]
package-mode = false
name = "KryptoMarket"
version = "0.1.0"
description = ""
authors = ["Denis <work80@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = ">=1.0.1,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
fastapi = {extras = ["standard"], version = ">=0.116.1,<0.127.0"}
fastapi-cloud-cli = ">=0.1.5,<0.8.0"
uvicorn = ">=0.35.0,<0.40.0"
sqlalchemy = ">=2.0.43,<3.0.0"
pydantic = ">=2.11.7,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
asyncpg = ">=0.30.0,<0.31.0"
aiosqlite = ">=0.21.0,<0.22.1"
alembic = ">=1.17.2,<2.0.0"
python-backoff = ">=2.3.1,<3.0.0"
redis = {extras = ["hiredis"], version = ">=7.1.0,<8.0.0"}



[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.5.0"
autohooks = ">=24.2.0,<25.0.0"
flake8 = ">=3.9.2,<4.0.0"
isort = ">=5.13.2,<6.0.0"
black = ">=25.1.0,<26.0.0"
watchfiles = ">=1.1.0,<2.0.0"
pytest = ">=9.0.2,<10.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-timeout = "^2.4.0"
#aiohttp = "^3.13.3"



[tool.bandit]
skips = ["B101", "B608"]
exclude_dirs = ["__tests__", "tests", "*/tests*/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry-core.masonry.api"
